zokrates_cli/examples/compile_errors/generics/assertion.zok
def foo<N>(field[N] inputs) -> bool {
    assert(N <= 5);
    return true;
}

def main() {
    bool b = foo([1, 2, 3, 4, 5, 6]);
    return;
}

